--- a/priv/rules/mahou_shoujo.yml
+++ b/priv/rules/mahou_shoujo.yml
@@ -423,7 +423,7 @@
     title_ru: Магия — второе имя
     text_ru: Не важно, какой ваш пол и сколько вам лет, если ваше призвание — нести любовь и справедливость.
     image: /assets/achievements/anime/mahou_shoujo_2.jpg
-    border_color: "#DAA571"
+    border_color: "#DB7093"
 
 - <<: *defaults
   level: 3
