--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1478,7 +1478,7 @@
   metadata: &156
     title_ru: Хладнокровный Хозуки
     title_en: Hoozuki no Reitetsu
-    image: https://desu.shikimori.org/system/user_images/original/249685/706813.jpg
+    image: "/assets/achievements/anime/franchise/hoozuki_no_reitetsu.jpg"
     topic_id: 247360
 - neko_id: hoozuki_no_reitetsu
   level: 0
