--- a/priv/rules/music.yml
+++ b/priv/rules/music.yml
@@ -7,35 +7,35 @@
     genre_ids:
       - 19
   metadata:
-    title_ru: Это не школьный клуб
-    text_ru: Весьма посредственное отношение к музыке.
+    title_ru: Звуки музыки
+    text_ru: Они раскрашивают этот мир в яркие цвета.
     image: /assets/achievements/anime/music_1.png
-    border_color: "#8fa9dc"
+    border_color: "#FBCEB1"
     topic_id: 222061
 
 - <<: *defaults
   level: 2
   threshold: 40
   metadata:
-    title_ru: Это не вокалоид
-    text_ru: Звуки сложились в песню.
+    title_ru: Там, где слова бессильны
+    text_ru: Музыка – это язык, на котором душа общается с душою, стирая границы условностей.
     image: /assets/achievements/anime/music_2.jpg
-    border_color: "#4285b4"
+    border_color: "#9DB1CC"
 
 - <<: *defaults
   level: 3
   threshold: 60
   metadata:
-    title_ru: Это не айдол
-    text_ru: Вы ведь знаете, неважно что они поют, но они должны вкладывать в это своё сердце.
+    title_ru: Новая мелодия
+    text_ru: В буре страстей и море эмоций рождаются композиции, способные изменить мир.
     image: /assets/achievements/anime/music_3.jpg
-    border_color: "#cd5c5c"
+    border_color: "#7FC7FF"
 
 - <<: *defaults
   level: 4
   threshold: 100
   metadata:
-    title_ru: Это не продюсер
-    text_ru: Кажется, вы знаток музыкальной индустрии. Ну и что теперь?.. Откроете своё агентство с инновациями и идолами?
+    title_ru: Играя на струнах души
+    text_ru: Музыка - это не просто красивые мелодии, без нее сама жизнь была бы ошибкой
     image: /assets/achievements/anime/music_4.gif
-    border_color: "#4c514a"
+    border_color: "#4D4234"
