fix image extension

--- a/priv/rules/music.yml
+++ b/priv/rules/music.yml
@@ -9,7 +9,7 @@
   metadata:
     title_ru: Звуки музыки
     text_ru: Они раскрашивают этот мир в яркие цвета.
-    image: /assets/achievements/anime/music_1.png
+    image: /assets/achievements/anime/music_1.jpg
     border_color: "#FBCEB1"
     topic_id: 222061
 
