--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -1,25 +1,4 @@
-- &defaults
-  neko_id: animelist
-  level: 1
-  algo: count
-  threshold: 15
-  metadata:
-    title_ru: Добро пожаловать!
-    text_ru: Легкой поступью вы вошли в этот мир.
-    image: /assets/achievements/anime/animelist_1.png
-    border_color: "#e52b50"
-    topic_id: 227416
-
-- <<: *defaults
-  level: 2
-  threshold: 50
-  metadata:
-    title_ru: Это всего лишь начало
-    text_ru: Ставки начинают расти. Кто-то уже сдался, но вы... Вы ещё в строю.
-    image: /assets/achievements/anime/animelist_2.png
-    border_color: "#a5260a"
-
-- <<: *defaults
+<<: *defaults
   level: 3
   threshold: 100
   metadata:
@@ -27,162 +6,3 @@
     text_ru: Вы достигли магического трехзначного числа. Но не время останавливаться, все еще впереди!
     image: /assets/achievements/anime/animelist_3.jpg
     border_color: "#6a5acd"
-
-- <<: *defaults
-  level: 4
-  threshold: 150
-  metadata:
-    title_ru: Беззаботный зритель
-    text_ru: Ничего серьёзного. Вы лишь успели привыкнуть к тому, что глаза у персонажей больше, чем нос. Если у них вообще есть нос.
-    image: /assets/achievements/anime/animelist_4.jpg
-    border_color: "#6495ED"
-
-- <<: *defaults
-  level: 5
-  threshold: 200
-  metadata:
-     title_ru: Легкая прогулка
-     text_ru: В дорогу дальнюю идем по неизведанным тропинкам. Сколько впереди ещё интересного!
-     image: /assets/achievements/anime/animelist_5.jpg
-     border_color: "#FFDC33"
-
-- <<: *defaults
-  level: 6
-  threshold: 300
-  metadata:
-    title_ru: Эстет
-    text_ru: Качественная графика, прекрасное музыкальное сопровождение, интересные сюжеты... эти японские мультики весьма хороши.
-    image: /assets/achievements/anime/animelist_6.jpg
-    border_color: "#C5D0E6"
-
-- <<: *defaults
-  level: 7
-  threshold: 400
-  metadata:
-    title_ru: Есть чем похвастаться
-    text_ru: Просмотрено 400 аниме. Это... солидно. Вы можете гордиться собой, определённо.
-    image: /assets/achievements/anime/animelist_7.jpg
-    border_color: "#ACB78E"
-
-- <<: *defaults
-  level: 8
-  threshold: 500
-  metadata:
-    title_ru: Много свободного времени?
-    text_ru: Одно увлечение может затянуть с головой, но помните, что в мире ещё много приятных вещей...
-    image: /assets/achievements/anime/animelist_8.jpg
-    border_color: "#3F888F"
-
-- <<: *defaults
-  level: 9
-  threshold: 666
-  metadata:
-    title_ru: Сатанинский предел?
-    text_ru: Стремишься стать частью той силы, что вечно хочет зла и вечно совершает благо? Что ж, только внимательно читай те условия контракта, что мелким шрифтом.
-    image: /assets/achievements/anime/animelist_9.jpg
-    border_color: "#ab274f"
-
-- <<: *defaults
-  level: 10
-  threshold: 750
-  metadata:
-    title_ru: Это даже не финальная форма
-    text_ru: Ваш единственный путь — вверх. Пора учиться доброй снисходительности.
-    image: /assets/achievements/anime/animelist_10.gif
-    border_color: "#20B2AA"
-
-- <<: *defaults
-  level: 11
-  threshold: 888
-  metadata:
-    title_ru: Бесконечное путешествие
-    text_ru: У каждого свои звезды. Одним они указывают путь, для других это просто маленькие огоньки. Дорога вперед бесконечна. Хотите ли вы продолжать идти по ней?
-    image: /assets/achievements/anime/animelist_11.jpg
-    border_color: "#002f55"
-
-- <<: *defaults
-  level: 12
-  threshold: 1000
-  metadata:
-    title_ru: Точка невозврата
-    text_ru: Вы достигли четырёхзначного числа. Довольны?
-    image: /assets/achievements/anime/animelist_12.jpg
-    border_color: "#a2a2d0"
-
-- <<: *defaults
-  level: 13
-  threshold: 1234
-  metadata:
-    title_ru: Раз, два, три, четыре
-    text_ru: |-
-      Раз котенок — самый белый
-      Два котенок — самый смелый
-      Три котенок — самый умный
-      А четыре — самый шумный
-    image: /assets/achievements/anime/animelist_13.jpg
-    border_color: "#C7D0CC"
-
-- <<: *defaults
-  level: 14
-  threshold: 1500
-  metadata:
-    title_ru: Гурман
-    text_ru: Ваша неразборчивость в потреблении аниме-блюд вызывает трепет, а способность переваривать любой контент — восхищение.
-    image: /assets/achievements/anime/animelist_14.jpg
-    border_color: "#F64A46"
-
-- <<: *defaults
-  level: 15
-  threshold: 2000
-  metadata:
-    title_ru: Маньяк
-    text_ru: Это так круто? Возможно вам следует обратиться к врачу.
-    image: /assets/achievements/anime/animelist_15.jpg
-    border_color: "#ED3CCA"
-
-- <<: *defaults
-  level: 16
-  threshold: 2500
-  metadata:
-    title_ru: Герой
-    text_ru: Результат интенсивных тренировок на поприще аниме-просмотра — необычный внешний вид, а побочный эффект — стильный костюмчик.
-    image: /assets/achievements/anime/animelist_16.jpg
-    border_color: "#FFDB58"
-
-- <<: *defaults
-  level: 17
-  threshold: 3500
-  metadata:
-    title_ru: Голубая кровь
-    text_ru: Вы находитесь так высоко! Кто-то восхищается вами, кто-то завидует, и это — заслуженно. Но не стоит задирать нос, помните, что и вы начинали с малого.
-    image: /assets/achievements/anime/animelist_17.jpg
-    border_color: "#fce883"
-
-- <<: *defaults
-  level: 18
-  threshold: 5000
-  metadata:
-    title_ru: Просветленный
-    text_ru: |-
-      Мастер познается в самоограничении.
-      И в долгой созерцательной практике.
-    image: /assets/achievements/anime/animelist_18.jpg
-    border_color: "#FFBA00"
-
-- <<: *defaults
-  level: 19
-  threshold: 7500
-  metadata:
-    title_ru: Легенда
-    text_ru: Вы один из избранных. Вам уже даже не нужно хвастаться, потому что все и так слышали о вас.
-    image: /assets/achievements/anime/animelist_19.jpg
-    border_color: "#003153"
-
-- <<: *defaults
-  level: 20
-  threshold: 10000
-  metadata:
-    title_ru: "SlotAchievName_0020: NULL"
-    text_ru: "Description: Теперь вам не нужно аниме, чтобы смотреть аниме."
-    image: /assets/achievements/anime/animelist_20.gif
-    border_color: "#231A24"
