--- a/priv/rules/seinen.yml
+++ b/priv/rules/seinen.yml
@@ -38,6 +38,6 @@
   threshold: 120
   metadata:
     title_ru: Быть человеком
-    text_ru: Если у вас нет ста пушек в руках и одной в сердце, то дальнейший просмотр становиться рискованным.
+    text_ru: Если у вас нет ста пушек в руках и одной в сердце, то дальнейший просмотр становится рискованным.
     image: /assets/achievements/anime/seinen_4.gif
     border_color: "#5F9EA0"
