--- a/priv/rules/sovietanime.yml
+++ b/priv/rules/sovietanime.yml
@@ -2,7 +2,7 @@
 - neko_id: sovietanime # http://russia-in-anime.ru/index.php/site/search?tag=0&sort=title
   level: 1
   algo: count
-  threshold: 30%
+  threshold: 50
   filters:
     anime_ids:
       - 10073
