--- a/priv/rules/tsundere.yml
+++ b/priv/rules/tsundere.yml
@@ -1085,7 +1085,7 @@
       - 7745
   metadata:
     title_ru: Это не то, о чем ты подумал
-    text_ru: Н-не то, что я бы волновалась о тебе, я-ясно?
+    text_ru: Н-не то, чтобы я волновалась о тебе, я-ясно?
     image: /assets/achievements/anime/tsundere_1.png
     border_color: "#c5d0e6"
     topic_id: 227430
