--- a/priv/rules/comedy.yml
+++ b/priv/rules/comedy.yml
@@ -35,7 +35,7 @@
   level: 4
   threshold: 400
   metadata:
-    title_ru: Праздник без конца
+    title_ru: Праздник без конца!
     text_ru: Жизнь серьезна всегда, но жить всегда серьезно — нельзя!
     image: /assets/achievements/anime/comedy_4.gif
     border_color: "#FFA500"
