--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1415,7 +1415,7 @@
     not_anime_ids:
     - 2920
     - 2922
-  threshold: 99%%
+  threshold: 99.3%
   metadata: &151
     title_ru: Завтрашний Джо
     title_en: Ashita no Joe
