--- a/priv/rules/tsundere.yml
+++ b/priv/rules/tsundere.yml
@@ -1068,7 +1068,7 @@
   metadata:
     title_ru: Это не то, о чем ты подумал
     text_ru: Н-не то, чтобы я волновалась о тебе, я-ясно?
-    image: /assets/achievements/anime/tsundere_1.png
+    image: /assets/achievements/anime/tsundere_1.jpg
     border_color: "#FCD975"
     topic_id: 227430
 
