--- a/priv/rules/yuuri.yml
+++ b/priv/rules/yuuri.yml
@@ -43,7 +43,7 @@
     text_ru: ... и мне понравилось!
     title_en: I kissed a girl...
     text_en: ...and I liked it!
-    image: /assets/achievements/anime/yuuri_3.png
+    image: /assets/achievements/anime/yuuri_3.jpg
     border_color: "#FADADD"
 
 - <<: *defaults
