--- a/priv/rules/kuudere.yml
+++ b/priv/rules/kuudere.yml
@@ -347,8 +347,8 @@
       - 36943
       - 34497
   metadata:
-    title_ru: Тишина
-    text_ru: Кудере молчит только потому, что того хочет.
+    title_ru: НЕКОДРОЧЕР
+    text_ru: ДРОЧЕТ НА НЕКОДЕВОЧЕК.
     image: /assets/achievements/anime/kuudere_1.jpg
     border_color: "#9ad1ee"
     topic_id: 227421
