--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -75,7 +75,7 @@
   metadata: &8
     title_ru: Научные приключения
     title_en: Science Adventure
-    image: https://moe.shikimori.org/system/user_images/original/210/668527.jpg
+    image: "/assets/achievements/anime/franchise/science_adventure.jpg"
     topic_id: 247360
 - neko_id: science_adventure
   level: 0
@@ -1655,7 +1655,7 @@
   metadata: &176
     title_ru: Лилии на ветру
     title_en: Yuru Yuri
-    image: https://kawai.shikimori.org/system/user_images/original/3824/719351.jpg
+    image: "/assets/achievements/anime/franchise/yuru_yuri.jpg"
     topic_id: 247360
 - neko_id: yuru_yuri
   level: 0
